# rust_wasm_utils

./: .gitignore  Cargo.toml
data/: prestuplenie-i-nakazanie.txt
html/: index.html
html/js/: rust_wasm_utils.js  rust_wasm_utils_bg.js  rust_wasm_utils_bg.wasm
pkg/: package.json  rust_wasm_utils.d.ts  rust_wasm_utils_bg.js  rust_wasm_utils_bg.wasm  rust_wasm_utils_bg.wasm.d.ts
src/: lib.rs  main.rs
src/utils/: crypto.rs  image.rs  mod.rs
www/: index.html  index.js  package.json  styles.css
